# mailing-service

./: .env.sample  .flake8  README.md  pyproject.toml  send_emails.py
blog/: admin.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_image_alter_post_slug_and_more.py
client_management/: admin.py  forms.py  models.py  services.py  urls.py  views.py
client_management/migrations/: 0001_initial.py  0002_initial.py
config/: settings.py  urls.py
cron_jobs/: send_emails.py
mail_sender/: admin.py  forms.py  models.py  urls.py  views.py
mail_sender/migrations/: 0001_initial.py  0002_alter_mailingsettings_mailing_periodicity.py  0002_alter_mailingsettings_mailing_status.py  0002_rename_mailingmassage_massagetosend_and_more.py  0003_alter_mailinglogs_options.py  0003_alter_mailingsettings_mailing_periodicity.py  0003_remove_mailingsettings_mailing_time.py  0004_alter_mailingsettings_mailing.py  0004_alter_mailingsettings_mailing_periodicity.py  0005_alter_mailingsettings_mailing_periodicity.py  0005_alter_mailingsettings_mailing_status.py  0006_alter_mailingsettings_mailing_status.py  0006_remove_mailinglogs_client_and_more.py  0007_mailingsettings_mailing_time.py  0008_remove_massagetosend_mailing_settings.py  0009_rename_massagetosend_mailing.py  0010_mailinglogs_mailing_mailingsettings_mailing.py
mailing management/: views.py
mailing_management/: admin.py  apps.py  cron.py  forms.py  models.py  services.py  urls.py  views.py
mailing_management/migrations/: 0001_initial.py  0002_alter_mailinglogs_last_try_date.py  0002_alter_mailingsettings_mailing_periodicity.py  0002_initial.py  (+8 more)
services/: crontab_utils.py  mixins.py  utils.py
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
(+31 files in other folders)
