[tool.poetry]
name = "coursework-6"
version = "0.1.0"
description = ""
authors = ["RomanBogdanov <lackroy5111@gmail.com>"]
readme = "README.md"
packages = [{include = "coursework_6"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
