[tool.poetry]
name = "coursework-6"
version = "0.1.0"
description = ""
authors = ["RomanBogdanov <lackroy5111@gmail.com>"]
readme = "README.md"
packages = [{include = "coursework_6"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
psycopg2 = "^2.9.6"
redis = "^4.6.0"
python-dotenv = "^1.0.0"
python-crontab = "^3.0.0"
django-extensions = "^3.2.3"
pytz = "^2023.3"
pillow = "^10.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-bugbear = "^23.7.10"
pep8-naming = "^0.13.3"
flake8-commas = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
